--- a/src/app/components/pricing-plans/pricing-plans.component.html
+++ b/src/app/components/pricing-plans/pricing-plans.component.html
@@ -10,37 +10,6 @@
       the payment page momentarily!
     </div>
     <h2>Choose a plan that works for you!</h2>
-    <div class="intro-card card">
-      <div class="d-flex flex-column">
-        <div class="english-intro">
-          Are you a restaurant looking for a quick and easy solution for digital
-          menus with QR code integration? BienMenu offers a simple, user
-          friendly interface that hosts all of your menus in one place, with one
-          QR code. This solution is safe for the customer and efficient for your
-          serving staff as it will reduce the number of menus that they will
-          have to sanitize throughout their shift. With our digital menu
-          platform, you will be able to add, modify or delete a digital menu at
-          the click of a few buttons, all while maintaining the same QR code.
-          Best of all, our basic plan offers the solution for QR code menu free
-          of charge. Check out our current plans below to get started!
-        </div>
-        <div class="vertical-divider"></div>
-        <div class="french-intro">
-          Êtes-vous un restaurateur à la recherche d'une solution simple et
-          rapide pour transformer vos menus en version numérique que peut être
-          accédé en scannant un code QR? BienMenu offre une solution efficace
-          sur une plateforme facile d'utilisation qui accueille tous vos menus
-          permanents à un seul endroit à l'aide d'un seul code QR. Cette
-          solution est sécuritaire pour vos clients et efficaces pour vos
-          employés procurant à vos clients un menu disponible en tout temps et
-          qui n'a pas besoin d'être nettoyé. Avec notre plateforme, vous pouvez
-          ajouter, modifier ou supprimer un menu numérisé simplement et
-          efficacement, et maintenir le même code QR. Mieux encore, notre plan
-          de base offre la solution gratuite pour le menu code QR. Consultez nos
-          plans actuels ci-dessous pour commencer!
-        </div>
-      </div>
-    </div>
     <div class="card-deck">
       <div class="card" *ngIf="!isLoggedIn">
         <div class="card-header text-center">Base</div>
@@ -55,20 +24,15 @@
           >
             Select
           </button>
-        </div>
-        <div class="card-footer">
           <ul class="plan-feature-list">
             <li>
-              Ideal for menus that do not get updated often / <br />
-              Idéal pour les menus qui ne change pas fréquemment
+              Ideal for menus that do not get updated often
             </li>
             <li>
-              Update or add up to one menu per month / <br />
-              Modifier ou ajouter jusqu’à un menu par mois
+              Update or add up to one menu per month
             </li>
             <li>
-              Unlimited menu deleting / <br />
-              Suppression de menu illimitée
+              Unlimited menu deleting
             </li>
           </ul>
         </div>
@@ -87,34 +51,25 @@
           >
             Start Free Trial
           </button>
-        </div>
-        <div class="card-footer">
           <ul class="plan-feature-list">
             <li>
-              Great for managing your menus frequently / <br />
-              Idéal pour gérer vos menus fréquemment
+              Great for managing your menus frequently
             </li>
             <li>
-              Manage unlimited menus / <br />
-              Gérez des menus illimités
+              Manage unlimited menus
             </li>
             <li>
-              Manage your table d'hôte / <br />
-              Gérez votre table d'hôte
+              Manage your table d'hôte
             </li>
             <li>
-              Manage your daily food and drink specials / <br />
-              Gérez vos spéciaux du jour
+              Manage your daily food and drink specials
             </li>
             <li>
-              An optional contact tracing form / <br />
-              Un formulaire de recherche de contact optionne
+              An optional contact tracing form
             </li>
             <li>
               A single QR code for your menus and your optional contact tracing
-              form / <br />
-              Un code QR unique pour vos menus et votre formulaire de recherche
-              de contact optionnel
+              form
             </li>
           </ul>
         </div>
@@ -133,34 +88,25 @@
           >
             Start Free Trial
           </button>
-        </div>
-        <div class="card-footer">
           <ul class="plan-feature-list">
             <li>
-              Great for managing your menus frequently / <br />
-              Idéal pour gérer vos menus fréquemment
+              Great for managing your menus frequently
             </li>
             <li>
-              Manage unlimited menus / <br />
-              Gérez des menus illimités
+              Manage unlimited menus
             </li>
             <li>
-              Manage your table d'hôte / <br />
-              Gérez votre table d'hôte
+              Manage your table d'hôte
             </li>
             <li>
-              Manage your daily food and drink specials / <br />
-              Gérez vos spéciaux du jour
+              Manage your daily food and drink specials
             </li>
             <li>
-              An optional contact tracing form / <br />
-              Un formulaire de recherche de contact optionne
+              An optional contact tracing form
             </li>
             <li>
               A single QR code for your menus and your optional contact tracing
-              form / <br />
-              Un code QR unique pour vos menus et votre formulaire de recherche
-              de contact optionnel
+              form
             </li>
           </ul>
         </div>
