--- a/src/app/components/pricing-plans/pricing-plans.component.css
+++ b/src/app/components/pricing-plans/pricing-plans.component.css
@@ -12,16 +12,22 @@
   text-align: center;
 }
 
-.intro-card {
-  padding: 20px 100px 20px 100px;
-  margin-bottom: 50px;
-  border: none;
+.card-header {
+  background-color: #009688;
+  color: #fffef2;
 }
 
 .plans-container-content .card-deck .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+.plan-feature-list {
+  padding-top: 10px;
+  margin-top: 20px;
+  border-top: 2px solid #009688;
+}
+
 .plan-feature-list li {
+  text-align: left;
   padding: 5px;
 }
