--- a/src/styles.css
+++ b/src/styles.css
@@ -26,7 +26,7 @@ body {
 
 button {
   background-color: #009688 !important;
-  color: white !important;
+  color: #fffef2 !important;
   cursor: pointer;
 }
 
