--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,31 +1,33 @@
 <div class="home container-fluid">
   <!-- <img src="./assets/img/home-background.jpg" /> -->
   <div class="home-overlay"></div>
-  <div class="home-content container d-flex">
-    <div class="p-2 home-left" [@fadeInOut]>
-      <img src="./assets/img/burger-girl-2.png" />
-    </div>
-    <div class="p-2 home-right" [@fadeInOut]>
-      <div class="home-right-column d-flex flex-column">
-        <img src="./assets/img/bienmenu-long-logo.png" />
-        <h1>Digital Menu Platform</h1>
-        <p>The easy way to manage your QR Code Menu</p>
+  <div class="home-content container">
+    <div class="row">
+      <div class="home-left col-md-6">
+        <img src="./assets/img/burger-girl-2.png" />
+      </div>
+      <div class="home-right col-md-6">
+        <div class="home-right-column d-flex flex-column">
+          <img src="./assets/img/bienmenu-long-logo.png" />
+          <h1>Digital Menu Platform</h1>
+          <p>The easy way to manage your QR Code Menu</p>
 
-        <div *ngIf="!isLoggedIn">
-          <div class="join-login-container d-flex flex-column">
-            <button
-              mat-raised-button
-              class="join-btn btn"
-              (click)="goToPricing()"
-            >
-              Join Now
-            </button>
+          <div *ngIf="!isLoggedIn">
+            <div class="join-login-container d-flex flex-column">
+              <button
+                mat-raised-button
+                class="join-btn btn"
+                (click)="goToPricing()"
+              >
+                Join Now
+              </button>
 
-            <div class="d-flex">
-              Already a member?&nbsp;
-              <a routerLink="/login" mdbWavesEffect>
-                Log In
-              </a>
+              <div class="d-flex">
+                Already a member?&nbsp;
+                <a routerLink="/login" mdbWavesEffect>
+                  Log In
+                </a>
+              </div>
             </div>
           </div>
         </div>
