--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -29,6 +29,11 @@
   width: 100%;
 }
 
+.home-right img {
+  width: 400px;
+  height: auto;
+}
+
 .home-right-column {
   height: 100vh;
   align-items: center;
