--- a/src/app/components/address-autocomplete/address-autocomplete.component.html
+++ b/src/app/components/address-autocomplete/address-autocomplete.component.html
@@ -5,7 +5,7 @@
       <input
         type="text"
         #search
-        placeholder="Select your country and start typing your restaurant name"
+        placeholder="Search for your restaurant"
         class="form-control"
         (keydown.enter)="$event.preventDefault()"
         autocorrect="off"
