--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,9 +1,9 @@
 <div class="register-container container-fluid">
   <div class="register-container-content card card-container">
     <img
-      id="profile-img"
+      id="card-img"
       src="./assets/img/bienmenu-long-logo.png"
-      class="profile-img-card"
+      class="card-img"
     />
     <div class="alert alert-success" *ngIf="isSubmitted && isSignupSuccessful">
       Your sign up was successful!
