--- a/src/app/components/admin-board/admin-board.component.html
+++ b/src/app/components/admin-board/admin-board.component.html
@@ -3,23 +3,44 @@
     <div class="d-flex flex-column" *ngIf="accessAllowed">
       <h2>All Restaurants</h2>
       <ul class="restaurants list-group">
-        <li
-          *ngFor="let restaurant of restaurants"
-          class="list-group-item d-flex justify-content-between align-items-center"
-        >
-          {{ restaurant.name }}
-          <div class="d-flex justify-content-between">
-            <a routerLink="/menus/{{ restaurant._id }}">
-              <button mat-raised-button class="btn">View Menus</button>
-            </a>
-            <div class="divider"></div>
-            <a routerLink="/detail/{{ restaurant._id }}">
-              <button mat-raised-button class="btn">Manage Menus</button>
-            </a>
-            <div class="divider"></div>
-            <a routerLink="/qrcode/{{ restaurant._id }}/{{ restaurant.color }}">
-              <button mat-raised-button class="btn">Get QR Code</button>
-            </a>
+        <li *ngFor="let restaurant of restaurants" class="list-group-item">
+          <div class="container">
+            <div class="row align-items-center">
+              <div class="col-md-2">
+                <span>{{ restaurant.name }}</span>
+              </div>
+              <div class="col-md-10">
+                <div class="row justify-content-end">
+                  <div class="col-sm-3">
+                    <button
+                      mat-raised-button
+                      class="btn btn-block"
+                      (click)="goToRoute('/menus/' + restaurant._id)"
+                    >
+                      View Menus
+                    </button>
+                  </div>
+                  <div class="col-sm-3">
+                    <button
+                      mat-raised-button
+                      class="btn btn-block"
+                      (click)="goToRoute('/detail/' + restaurant._id)"
+                    >
+                      Manage Menus
+                    </button>
+                  </div>
+                  <div class="col-sm-3">
+                    <button
+                      mat-raised-button
+                      class="btn btn-block"
+                      (click)="goToRoute('/qrcode/' + restaurant._id)"
+                    >
+                      Get QR Code
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </li>
       </ul>
