--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,4 @@
 <div class="home container-fluid">
-  <!-- <img src="./assets/img/home-background.jpg" /> -->
   <div class="home-overlay"></div>
   <div class="home-content container">
     <div class="row">
@@ -9,8 +8,8 @@
       <div class="home-right col-md-6">
         <div class="home-right-column d-flex flex-column">
           <img src="./assets/img/bienmenu-long-logo.png" />
-          <h1>Digital Menu Platform</h1>
-          <p>The easy way to manage your QR Code Menu</p>
+          <h1>QR Code Menu Platform</h1>
+          <p>The easy way to manage your contactless Menu</p>
 
           <div *ngIf="!isLoggedIn">
             <div class="join-login-container d-flex flex-column">
@@ -21,12 +20,9 @@
               >
                 Join Now
               </button>
-
               <div class="d-flex">
                 Already a member?&nbsp;
-                <a routerLink="/login" mdbWavesEffect>
-                  Log In
-                </a>
+                <a routerLink="/login" mdbWavesEffect> Log In </a>
               </div>
             </div>
           </div>
