--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,9 +1,9 @@
 <div class="login-container container-fluid">
   <div class="login-container-content card card-container">
     <img
-      id="profile-img"
+      id="card-img"
       src="./assets/img/bienmenu-long-logo.png"
-      class="profile-img-card"
+      class="card-img"
     />
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
       <div class="md-form mb-5">
@@ -24,10 +24,8 @@
             >Username or email is required</span
           >
         </mdb-error>
-        <div style="padding-top: 5px; text-align: right;">
-          <a [routerLink]="['/pricing-plans']">
-            Not a member? Sign up now!
-          </a>
+        <div style="padding-top: 5px; text-align: right">
+          <a [routerLink]="['/pricing-plans']"> Not a member? Sign up now! </a>
         </div>
       </div>
       <div class="md-form mb-5">
@@ -46,10 +44,8 @@
         >
           <span *ngIf="f.password.errors.required">Password is required</span>
         </mdb-error>
-        <div style="padding-top: 5px; text-align: right;">
-          <a [routerLink]="['/request-reset-password']">
-            Forgot Password?
-          </a>
+        <div style="padding-top: 5px; text-align: right">
+          <a [routerLink]="['/request-reset-password']"> Forgot Password? </a>
         </div>
       </div>
       <div class="form-group text-center">
