--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -14,6 +14,11 @@
   padding: 20px; */
 }
 
+.login-container-content .card-img {
+  width: 100%;
+  height: auto;
+}
+
 label {
   display: block;
   width: 12em;
