--- a/src/app/components/menu-list/menu-list.component.html
+++ b/src/app/components/menu-list/menu-list.component.html
@@ -33,7 +33,7 @@
           [render-text]="true"
           [original-size]="false"
           [show-borders]="true"
-          style="display: block;"
+          style="display: block"
         ></pdf-viewer>
       </div>
     </div>
@@ -46,7 +46,7 @@
 >
   <div class="container">
     <div class="d-flex flex-column">
-      <h4>Propulsé par / Powered by</h4>
+      <h4>Powered by</h4>
 
       <img
         class="bienmenu-long-logo"
