--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -14,6 +14,11 @@
   /* padding: 15px; */
 }
 
+.register-container-content .card-img {
+  width: 100%;
+  height: auto;
+}
+
 label {
   display: block;
   width: 12em;
