--- a/src/app/components/pricing-plans/pricing-plans.component.html
+++ b/src/app/components/pricing-plans/pricing-plans.component.html
@@ -25,15 +25,11 @@
             Select
           </button>
           <ul class="plan-feature-list">
-            <li>
-              Ideal for menus that do not get updated often
-            </li>
-            <li>
-              Update or add up to one menu per month
-            </li>
-            <li>
-              Unlimited menu deleting
-            </li>
+            <li>Ideal for menus that do not get updated often</li>
+            <li>Add up to 4 menus to your restaurant</li>
+            <li>Unlimited scans</li>
+            <li>Update up to one menu per month</li>
+            <li>Optional customer checkin form for contact tracing</li>
           </ul>
         </div>
       </div>
@@ -52,21 +48,13 @@
             Start Free Trial
           </button>
           <ul class="plan-feature-list">
+            <li>Great for managing your menus frequently</li>
+            <li>Add up to 8 menus to your restaurant</li>
             <li>
-              Great for managing your menus frequently
+              Manage your daily food and drink specials with unlimited menu
+              updates
             </li>
-            <li>
-              Manage unlimited menus
-            </li>
-            <li>
-              Manage your table d'hôte
-            </li>
-            <li>
-              Manage your daily food and drink specials
-            </li>
-            <li>
-              An optional contact tracing form
-            </li>
+            <li>Optional customer checkin form for contact tracing</li>
             <li>
               A single QR code for your menus and your optional contact tracing
               form
@@ -89,21 +77,13 @@
             Start Free Trial
           </button>
           <ul class="plan-feature-list">
+            <li>Great for managing your menus frequently</li>
+            <li>Add up to 8 menus to your restaurant</li>
             <li>
-              Great for managing your menus frequently
+              Manage your daily food and drink specials with unlimited menu
+              updates
             </li>
-            <li>
-              Manage unlimited menus
-            </li>
-            <li>
-              Manage your table d'hôte
-            </li>
-            <li>
-              Manage your daily food and drink specials
-            </li>
-            <li>
-              An optional contact tracing form
-            </li>
+            <li>Optional customer checkin form for contact tracing</li>
             <li>
               A single QR code for your menus and your optional contact tracing
               form
