--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -181,7 +181,16 @@
           </div>
         </div>
       </div>
+      <div class="agreement-checkbox">
+        <mdb-checkbox formControlName="terms">
+          I agree to use this app under the following
+          <a href="https://www.bien-menu.com/terms" target="_blank"
+            >terms & conditions</a
+          >.
+        </mdb-checkbox>
+      </div>
     </form>
+
     <button
       mat-raised-button
       class="register-btn btn btn-primary"
