--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,7 +2,11 @@
   <div class="home-overlay"></div>
   <div class="home-content container">
     <div class="row">
-      <div class="home-left col-md-6">
+      <div
+        class="home-left col-md-6 d-none d-sm-block"
+        style="display: block"
+        [@fadeInOut]
+      >
         <img src="./assets/img/burger-girl-2.png" />
       </div>
       <div class="home-right col-md-6">
