update some minor spacing and responsive issues

--- a/src/app/components/contact-tracing/contact-tracing.component.html
+++ b/src/app/components/contact-tracing/contact-tracing.component.html
@@ -35,7 +35,7 @@
           raison du COVID-19. Vos informations resteront strictement
           confidentielles et ne seront utilisées que pour la recherche des
           contacts. Nous vous remercions de nous aider à assurer notre sécurité
-          à tous.
+          à tous. <br /><br />
         </div>
         <div>
           For your safety and the safety of our employees please take the time
