--- a/src/app/components/restaurant-detail/restaurant-detail.component.html
+++ b/src/app/components/restaurant-detail/restaurant-detail.component.html
@@ -75,10 +75,10 @@
         </div>
         <div class="list-group-item" *ngIf="!hostedInternal">
           <div class="row restaurant-setting">
-            <div class="col-md-3">
+            <div class="col-md-2">
               <span class="restaurant-detail-field">Menus available at:</span>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-auto">
               <div class="enabled-disabled">
                 {{ restaurant.externalMenuLink }}
               </div>
