--- a/src/app/components/admin-board/admin-board.component.html
+++ b/src/app/components/admin-board/admin-board.component.html
@@ -11,7 +11,7 @@
               </div>
               <div class="col-md-10">
                 <div class="row justify-content-end">
-                  <div class="col-sm-3">
+                  <div class="col-sm-2">
                     <button
                       mat-raised-button
                       class="btn btn-block"
@@ -20,7 +20,7 @@
                       View Menus
                     </button>
                   </div>
-                  <div class="col-sm-3">
+                  <div class="col-sm-auto">
                     <button
                       mat-raised-button
                       class="btn btn-block"
@@ -29,7 +29,7 @@
                       Manage Menus
                     </button>
                   </div>
-                  <div class="col-sm-3">
+                  <div class="col-sm-2">
                     <button
                       mat-raised-button
                       class="btn btn-block"
