--- a/src/app/components/user-board/user-board.component.html
+++ b/src/app/components/user-board/user-board.component.html
@@ -12,7 +12,7 @@
               </div>
               <div class="col-md-10">
                 <div class="row justify-content-end">
-                  <div class="col-sm-3">
+                  <div class="col-sm-2">
                     <button
                       mat-raised-button
                       class="btn btn-block"
@@ -21,7 +21,7 @@
                       View Menus
                     </button>
                   </div>
-                  <div class="col-sm-3">
+                  <div class="col-sm-auto">
                     <button
                       mat-raised-button
                       class="btn btn-block"
@@ -30,7 +30,7 @@
                       Manage Menus
                     </button>
                   </div>
-                  <div class="col-sm-3">
+                  <div class="col-sm-2">
                     <button
                       mat-raised-button
                       class="btn btn-block"
