set up basic skeleton for menu creator

--- a/src/app/components/main-navbar/main-navbar.component.html
+++ b/src/app/components/main-navbar/main-navbar.component.html
@@ -34,6 +34,16 @@
       </li>
       <li class="nav-item">
         <a
+          href="/food-items"
+          class="nav-link waves-light"
+          *ngIf="isLoggedIn"
+          routerLink="food-items"
+          mdbWavesEffect
+          >Food Items</a
+        >
+      </li>
+      <li class="nav-item">
+        <a
           href="/pricing-plans"
           class="nav-link waves-light"
           *ngIf="!isLoggedIn"
